--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,9 +16,9 @@
             >게시판 글쓰기 페이지(게시판 페이지에도 있음)</a
           >
         </li>
-        <li><a href="/login.html">로그인 페이지</a></li>
+        <li><a href="/login.do">로그인 페이지</a></li>
         <li>
-          <a href="/signUp.html">회원가입 페이지(로그인 페이지에도 있을예정)</a>
+          <a href="/join.do">회원가입 페이지(로그인 페이지에도 있을예정)</a>
         </li>
       </ol>
     </div>
