--- a/src/main/resources/templates/board-login.html
+++ b/src/main/resources/templates/board-login.html
@@ -9,7 +9,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">아아아</div>
   </body>
   <script>
     const app = Vue.createApp({
