--- a/src/main/resources/templates/board-view.html
+++ b/src/main/resources/templates/board-view.html
@@ -11,6 +11,7 @@
     <div id="app">
       <div>했다 치고</div>
       <div>{{boardItem}}</div>
+      <div v-html="boardItem.contents"></div>
     </div>
   </body>
   <script th:inline="javascript">
