--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,24 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/scripts/vue.min.js"></script>
+    <script src="/scripts/axios.min.js"></script>
+    <script src="/scripts/jquery.js"></script>
+    <link rel="stylesheet" href="/css/mainCss.css" />
     <title>Document</title>
   </head>
   <body>
     <div id="app">
-      <ol>
-        <li><a href="/board-list.do">게시판 페이지</a></li>
-        <li>
-          <a href="/board-insert.do"
-            >게시판 글쓰기 페이지(게시판 페이지에도 있음)</a
-          >
-        </li>
-        <li><a href="/login.do">로그인 페이지</a></li>
-        <li>
-          <a href="/join.do">회원가입 페이지(로그인 페이지에도 있을예정)</a>
-        </li>
-      </ol>
+      <button @click="fnMovePage('/board-list.do')">게시판</button>
+      <button @click="fnMovePage('/login.do')">로그인</button>
+      <button @click="fnMovePage('/join.do')">회원가입</button>
+      <button @click="fnMovePage('/user-list.do')">유저리스트</button>
     </div>
   </body>
   <script>
@@ -30,7 +24,11 @@
           name: "app",
         };
       },
-      methods: {},
+      methods: {
+        fnMovePage(page) {
+          location.href = page;
+        },
+      },
       mounted() {},
     });
     app.mount("#app");
