--- a/src/main/resources/static/css/mainCss.css
+++ b/src/main/resources/static/css/mainCss.css
@@ -20,7 +20,7 @@ tr:nth-child(even) {
   background-color: #f9f9f9;
 }
 input[type="text"] {
-  width: 100%; /* 부모 컨테이너의 너비에 맞게 설정 */
+  /* width: 100%; 부모 컨테이너의 너비에 맞게 설정 */
   padding: 6px 8px; /* 여백 조정 */
   border: 2px solid #333; /* 기본 테두리 색상 */
   border-radius: 8px; /* 둥근 모서리 */
