--- a/src/main/resources/templates/board-list.html
+++ b/src/main/resources/templates/board-list.html
@@ -10,10 +10,22 @@
     <link rel="stylesheet" href="/css/mainCss.css" />
     <title>게시판</title>
   </head>
+  <style></style>
   <body>
     <div id="app">
       <div>
-        검색 :
+        <button @click="fnCategory('all')">전체 보기</button>
+        <button @click="fnCategory('1')">공지사항</button>
+        <button @click="fnCategory('2')">자유 게시판</button>
+        <button @click="fnCategory('3')">질문 게시판</button>
+      </div>
+      <hr />
+      <div>
+        <select v-model="searchItem">
+          <option value="all">::전체::</option>
+          <option value="title">제목</option>
+          <option value="userName">작성자</option>
+        </select>
         <input
           style="width: 400px"
           type="text"
@@ -54,17 +66,28 @@
           name: "app",
           list: [],
           keyword: "",
+          searchItem: "all",
+          category: "all",
         };
       },
       methods: {
+        fnCategory(num) {
+          this.category = num;
+          this.fnGetBoardList();
+        },
         fnGo() {
           location.href = "/board-insert.do";
         },
         async fnGetBoardList() {
           const url = "/board-list.dox";
-          console.log(this.keyword);
+          const form = {
+            keyword: this.keyword,
+            searchItem: this.searchItem,
+            category: this.category,
+          };
+          console.log(form);
           try {
-            const response = await axios.post(url, { keyword: this.keyword });
+            const response = await axios.post(url, form);
             this.list = response.data.list;
           } catch (error) {
             console.error("Error fetching board list:", error);
