--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -3,14 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/scripts/vue.min.js"></script>
+    <script src="/scripts/axios.min.js"></script>
+    <script src="/scripts/jquery.js"></script>
+    <link rel="stylesheet" href="/css/mainCss.css" />
     <title>Document</title>
   </head>
   <body>
     <div id="app">
-      <div>user id : <input v-model="userId" @change="isCheck = false" /></div>
-      <button @click="fnIdCheck">중복체크</button>
+      <div>
+        <label for="userId">아이디</label>
+        <input
+          id="userId"
+          type="text"
+          v-model="userInfo.userId"
+          @change="isIdCheck = false"
+        />
+        <button @click="fnIdCheck">중복체크</button>
+      </div>
+      <div id="pwd">
+        <label>비밀 번호</label>
+        <input id="password" type="text" v-model="userInfo.password" />
+        <label for="passwordCheck">비밀 번호 확인</label>
+        <input id="passwordCheck" type="text" v-model="passwordCheck" />
+      </div>
+      <div>
+        <label for="userName">이름</label>
+        <input id="userName" type="text" v-model="userInfo.userName" />
+      </div>
+      <label for="nickName">닉네임</label>
+      <input id="nickName" type="text" v-model="userInfo.nickName" />
+      <div>
+        <div>
+          <label for="email">이메일</label>
+          <input id="email" type="text" v-model="userInfo.email" />
+        </div>
+        <label for="phone">전화번호</label>
+        <select v-model="phoneNum.first">
+          <option
+            v-for="(item, index) in firstPhoneNumList"
+            :key="index"
+            :value="item"
+          >
+            {{item}}
+          </option>
+        </select>
+        <input type="text" v-model="phoneNum.second" />
+        <input type="text" v-model="phoneNum.third" />
+        <button>전화번호 인증</button>
+      </div>
+      <div>
+        <label for="M">남자</label>
+        <input
+          id="M"
+          type="radio"
+          name="gender"
+          v-model="userInfo.gender"
+          value="M"
+        />
+        <label for="F">여자</label>
+        <input
+          id="F"
+          type="radio"
+          name="gender"
+          v-model="userInfo.gender"
+          value="F"
+        />
+      </div>
+      <button @click="fnSingUp">가입하기</button>
     </div>
   </body>
   <script>
@@ -18,14 +78,27 @@
       data() {
         return {
           name: "app",
-          userId: "",
-          isCheck: false,
+          isIdCheck: false,
+          firstPhoneNumList: ["010", "011", "016", "017", "019"],
+          phoneNum: { first: "", second: "", third: "" },
+          userInfo: {
+            userId: "",
+            password: "",
+            userName: "",
+            nickName: "",
+            phone: "",
+            gender: "",
+            email: "",
+          },
+          passwordCheck: "",
         };
       },
       methods: {
         async fnIdCheck() {
           const url = "/idCheck.dox";
-          const response = await axios.post(url, { userId: this.userId });
+          const response = await axios.post(url, {
+            userId: this.userInfo.userId,
+          });
           console.log(response.data);
           if (response.data.result == "success") {
             if (response.data.check == "none") {
@@ -35,6 +108,11 @@
           } else {
             alert("error");
           }
+        },
+        async fnSingUp() {
+          this.userInfo.phone =
+            this.phoneNum.first + this.phoneNum.second + this.phoneNum.third;
+          console.log(this.userInfo);
         },
       },
       mounted() {},
